# models/books.model.js
@@ -1,14 +1,17 @@
-module.exports = (sequelize, DataTypes) => {
-	const Categories = sequelize.define(
-		"categories",
-		{
-		name: {
-			type: DataTypes.STRING,
-			allowNull: false,
-			unique: true,
-			},
-		},
-		{timestamps: false}
-	)
-	return Categories
-}
+const { model, Schema } = require('mongoose');
+
+const bookSchema = new Schema({
+    userId: { type: String, required: true, index: true },
+    title: String,
+    author: String,
+    imageUrl: String,
+    year: Number,
+    genre: String,
+    ratings: [{
+        userId: String,
+        grade: Number
+    }],
+    averageRating: Number
+});
+
+module.exports = model('Book', bookSchema);
